--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE_FILES
         001twoSum.cpp 002addTwoNumbers.cpp
         003LongestSubstringWithoutRepeatingCharacters.cpp 004medianOfTwoSortedArrays.cpp
         005longestPalindromicSubstring.cpp 006zigZagConversion.cpp
+        007reverseInteger.cpp
 
         )
 add_executable(myLeetcode ${SOURCE_FILES})
