8. string to integer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCE_FILES
         001twoSum.cpp 002addTwoNumbers.cpp
         003LongestSubstringWithoutRepeatingCharacters.cpp 004medianOfTwoSortedArrays.cpp
         005longestPalindromicSubstring.cpp 006zigZagConversion.cpp
-        007reverseInteger.cpp
+        007reverseInteger.cpp 008StringToInteger.cpp
 
         226invertbinarytree.cpp
         )
