美团面试：求两个字符串中的共有字符的集合

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,9 @@ set(SOURCE_FILES
 
 
 
-        
+
         reverseSentence.cpp
         invertbinarytree.cpp
+        charactersInTwoStrings.cpp
         )
 add_executable(myLeetcode ${SOURCE_FILES})
